pushing to gh pages again to fix background image load on mobile

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,7 +3,7 @@ $secondary-color: #4ddbff;
 $font-primary: 'Montserrat', sans-serif;
 $font-secondary: 'Open Sans', sans-serif;
 $show-home-image: true;
-$home-image: url(../img/applelow.jpgS);
+$home-image: url(../img/applelow.jpg);
 $background-opacity: 0.6;
 
 /* mixins */
